# mean-bean-machine

./: .gitmodules  Cargo.toml  README.md  coffees.json  machines.json
src/: backend.rs  lib.rs  main.rs  server.rs
src/beans/: bean.rs  coffee_type.rs  mod.rs  serialization.rs  supplier.rs
src/machines/: machine.rs  mod.rs
