[package]
name = "mean-bean-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.13"
chrono = "0.4.24"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "=0.5.0-rc.3"
http = "0.2.9"